--- a/VA-Dashboard/index.html
+++ b/VA-Dashboard/index.html
@@ -5,7 +5,10 @@
     <title>VA Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/css/style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav class="tab-nav">
@@ -15,11 +18,13 @@
     </nav>
 
     <div id="tabs">
-      <div id="dashboard-tab" class="tab-content">Dashboard here</div>
+      <div id="dashboard-tab" class="tab-content">
+        <div id="dashboard-grid" class="dashboard-grid"></div>
+      </div>
       <div id="task-planner-tab" class="tab-content hidden"></div>
       <div id="forex-tab" class="tab-content hidden"></div>
     </div>
 
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.js" defer></script>
   </body>
 </html>
