--- a/VA-Dashboard/index.html
+++ b/VA-Dashboard/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>VA Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="/src/css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Open+Sans:wght@400;600&display=swap"
       rel="stylesheet"
@@ -18,13 +18,18 @@
     </nav>
 
     <div id="tabs">
+      <!-- Dashboard -->
       <div id="dashboard-tab" class="tab-content">
         <div id="dashboard-grid" class="dashboard-grid"></div>
       </div>
+
+      <!-- Task Planner -->
       <div id="task-planner-tab" class="tab-content hidden"></div>
+
+      <!-- Forex Section -->
       <div id="forex-tab" class="tab-content hidden"></div>
     </div>
 
-    <script type="module" src="src/main.js" defer></script>
+    <script type="module" src="/src/main.js" defer></script>
   </body>
 </html>
