`Refactor: Update file names, module names, and imports across the project`

--- a/VA-Dashboard/index.html
+++ b/VA-Dashboard/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+
     <meta charset="UTF-8" />
-    <title>VA Dashboard</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/css/style.css" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Hans Barredo">
+    <meta name="description" content="Your tool central for you VA work">
+
+    <link rel="icon" type="image/x-icon" href="/src/images/favicon-32x32.png">
+    
+     <link rel="stylesheet" href="/src/css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Open+Sans:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    
+    <title>VA Dashboard</title>
+   
   </head>
   <body>
     <nav class="tab-nav">
